# kami-text-diff

./: Cargo.toml  README.md  tool.toml
src/: lib.rs  tests.rs
